--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <title>
 </title >
 </head>
+<style>
+#lole{
+text-align: center;
+font-size:32;
+}
+</style>
 <body>
+<div id="lole">
 Coming Soon....
+</div>
 </body>
