--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 <style>
 #lole{
 text-align: center;
-font-size:32;
+font-size:32px;
+color:red;
 }
 </style>
 <body>
 <div id="lole">
-Coming Soon....
+<important>Coming Soon</important>
 </div>
 </body>
