--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 <style>
 #lole{
 text-align: center;
-font-size:32px;
+font-size:78px;
 color:red;
 }
 </style>
 <body>
 <div id="lole">
 <important>Coming Soon</important>
+<img src= "34D72FC5-BDD7-4627-99ED-E1BCD127BD45.gif" alt="Img " style="width:300px;height:300px; display: block; margin-right: auto; margin-left: auto;">
+
 </div>
 </body>
